Add tracking of sponsorship status, invoice ticket number, and notes
Each Outreachy sponsorship needs to be sent to Conservancy's RT ticket
interface. Sometimes sending the sponsorship information to Conservancy
gets delayed. Most often this is because we're waiting on invoicing
details from the sponsor, or we're confirming intern selections.

The notes field will let us keep track of what information we need to
gather. The status field allows us to use emojis to see the status of
our invoicing requests tasks. The RT ticket number field will help us
cross-reference data, and add quickly add our notes to Conservancy's
accounting system once we send the invoice.

The pages to view and edit sponsorship information are only accessible
to Django users with staff permissions. Otherwise they will get a
permission denied error page.

Update the sponsorship tests to reflect the new HTML layout of the
sponsorship info page.

TODO: I tried to add history tracking for the new fields, but could not
make it work by just adding a Revision mixin to the new
SponsorshipUpdates view. I suspect I'm doing something wrong - maybe
with the admin.py file? I can't remember how setting up history tracking
works right now, so I'll come back to it later.

TODO: The notes on the sponsor info page table need to be contained in
an accordion that is collapsed by default. However, I can't get the
accordion code to work (I always have trouble with bootstrap's aria
code, and I want to make sure the new code is accessible). So we'll just
display all the notes all the time for now.

--- a/home/templates/home/sponsor_info.html
+++ b/home/templates/home/sponsor_info.html
@@ -54,10 +54,16 @@ Sponsor info for {{ current_round.official_name }}
 		<th scope="col">Community</th>
 		{% for s in sponsors_alpha %}
 		{% if s.funding_secured %}<tr>{% else %}<tr class="table-warning">{% endif %}
-				<td><a href=""><button type="button" class="btn btn-primary">✏️ Edit</button></a></td>
-				<td></td>
-				<td></td>
-				<td>{{ s.name }}</td>
+				<td><a href="{% url 'edit-sponsorship' pk=s.pk %}?next={{ request.path|urlencode }}"><button type="button" class="btn btn-primary">✏️ Edit</button></a></td>
+				<td>{{ s.status }}</td>
+				<td>{% if s.ticket_number %}<a href='https://tix.sfconservancy.org/rt/Ticket/Display.html?id={{ s.ticket_number }}'</a>{{ s.ticket_number }}</a>{% endif %}</td>
+				<td>
+					<p>{{ s.name }}</p>
+					{% if s.organizer_notes %}
+					<p><b>Notes:</b></p>
+					{{ s.organizer_notes|safe }}
+					{% endif %}
+				</td>
 				<td>{{ s.amount }}</td>
 				{% if s.participation.approval_status == s.participation.APPROVED %}
 					<td><a href="#{{ s.participation.community.slug }}">{{ s.participation.community }}</a></td>
