Update dates for the December 2023 cohort
Update the dates for:

 - Internship agreement
 - Mentor agreement
 - Applicant live Q&A chat when initial applications open
 - Community coordinator live Q&A chat
 - Mentor live Q&A chat

--- a/home/templates/home/snippet/mentor-timeline.html
+++ b/home/templates/home/snippet/mentor-timeline.html
@@ -1,8 +1,9 @@
 <table class=table>
 	<tr><td width="175"><b>{{ current_round.pingnew }} at 4pm UTC</b></td><td>Community sign up opens</td></tr>
+	<tr><td><b>Aug. 7, 2023 at 4pm UTC</b></td><td><a href="https://www.youtube.com/@outreachyinternships">Live Q&A for Outreachy applicants</a></td></tr>
 	<tr><td width="175"><b>{{ current_round.initial_applications_open }} at 4pm UTC</b></td><td>Initial applications open</td></tr>
-	<tr><td><b>Jan. 24, 2023 at 3pm UTC</b></td><td><a href="https://diode.zone/a/outreachy/video-channels">Live-streamed mentor chat</a></td></tr>
-	<tr><td><b>Feb. 6, 2023 at 3pm UTC</b></td><td><a href="https://diode.zone/a/outreachy/video-channels">Live-streamed mentor chat</a></td></tr>
+	<tr><td><b>Aug. 15, 2023 at 4pm UTC</b></td><td><a href="https://www.youtube.com/@outreachyinternships">Live Q&A for FOSS communities mentoring Outreachy interns</a></td></tr>
+	<tr><td><b>Aug. 22, 2023 at 4pm UTC</b></td><td><a href="https://www.youtube.com/@outreachyinternships">Live Q&A for Outreachy mentors</a></td></tr>
 	<tr><td><b>{{ current_round.initial_applications_close }} at 4pm UTC</b></td><td>Initial application deadline</td></tr>
 	<tr><td><b>{{ current_round.lateorgs }} at 4pm UTC</b></td><td>Deadline for community sign up</td></tr>
 	<tr><td><b>{{ current_round.project_soft_deadline }} at 4pm UTC</b></td><td>Mentor project submission deadline</td></tr>
