Blog post on CFP for mentoring communities for the December 2023 cohort
Update the blog post with correct dates for this cohort.

Mention that mentor and community coordinator chats will be on YouTube,
provide link.

Use photo from Nigerian Outreachy 1,000 intern celebration with
Outreachy banner, instead of WoC in Tech Chat stock photo.

--- a/home/templates/home/snippet/mentor-timeline.html
+++ b/home/templates/home/snippet/mentor-timeline.html
@@ -5,8 +5,8 @@
 	<tr><td><b>Aug. 15, 2023 at 4pm UTC</b></td><td><a href="https://www.youtube.com/@outreachyinternships">Live Q&A for FOSS communities mentoring Outreachy interns</a></td></tr>
 	<tr><td><b>Aug. 22, 2023 at 4pm UTC</b></td><td><a href="https://www.youtube.com/@outreachyinternships">Live Q&A for Outreachy mentors</a></td></tr>
 	<tr><td><b>{{ current_round.initial_applications_close }} at 4pm UTC</b></td><td>Initial application deadline</td></tr>
-	<tr><td><b>{{ current_round.lateorgs }} at 4pm UTC</b></td><td>Deadline for community sign up</td></tr>
-	<tr><td><b>{{ current_round.project_soft_deadline }} at 4pm UTC</b></td><td>Mentor project submission deadline</td></tr>
+	<tr><td><b>{{ current_round.lateorgs }} at 4pm UTC</b></td><td>⚠️  Deadline for communities to sign up to mentor</td></tr>
+	<tr><td><b>{{ current_round.project_soft_deadline }} at 4pm UTC</b></td><td>⚠️  Deadline for mentors to subject project descriptions</td></tr>
 	<tr><td><b>{{ current_round.contributions_open }}</b></td><td>Contribution period begins</td></tr>
 	<tr><td><b>{{ current_round.contributions_close }}</b></td><td>Contribution period ends</td></tr>
 	<tr><td><b>{{ current_round.contributions_close }} at 4pm UTC</b></td><td>Final application deadline</td></tr>
