Add Tilda to Outreachy organizer contact page

--- a/contacts/templates/contact_form/contact.html
+++ b/contacts/templates/contact_form/contact.html
@@ -38,6 +38,14 @@ Contact Outreachy
 			<p>Sage Sharp is the Outreachy cultural change agent. Sage is also the Senior Director of Diversity and Inclusion at <a href="https://www.sfconservancy.org">Software Freedom Conservancy</a>. Sage is CEO of <a href="https://www.otter.technology">Otter Tech</a>. Sage uses they/them pronouns.</p>
 		</div>
 	</div>
+	<div class="row">
+		<div class="col-sm">
+			<img src="{% static 'organizers/tilda.jpeg' %}" class="img-thumbnail float-top mr-3" alt="Photo of Tilda" height="200" width="200">
+			<p>Tilda Udufo is the Outreachy mentor advocate. Tilda uses she/her pronouns.</p>
+		</div>
+		<div class="col-sm">
+		</div>
+	</div>
 </div>
 
 
