#555_guide.html Git hub

--- a/home/templates/home/docs/applicant_guide.html
+++ b/home/templates/home/docs/applicant_guide.html
@@ -284,7 +284,7 @@ The Outreachy website <a href="{% url 'account' %}">account preferences</a> will
 	<li><a href="https://medium.freecodecamp.org/outreachy-what-how-why-4fb60d10a228">How I got into the Outreachy open source internship program</a></li>
 	<li><a href="https://medium.com/@ihsavru/outreachy-the-end-87114b46def4">Application tips from an Outreachy intern who just completed their internship</a></li>
 	<li><a href="http://exploreshaifali.github.io/2015/06/08/getting-into-summer-of-code-programs/">Getting into Summer of Code Programs</a></li>
-	<li><a href="http://www.litacho.com/opw_the_end.html">The end of my internship</a> - note that Outreachy used to be called OPW</li>
+	<li><a href="http://www.litacho.com/opw_the_end.html">The end of my Internship</a> - note that Outreachy used to be called OPW</li>
 	<li><a href="https://web.archive.org/web/20130410022646/http://anteaya.info/blog/2013/03/29/suggestions-for-gnome-opw-applicants">Suggestions for Outreachy Applicants</a></li>
 </ul>
 </p>
