Fix finding/funding typo

--- a/home/templates/home/snippet/funding_short_description.html
+++ b/home/templates/home/snippet/funding_short_description.html
@@ -1,7 +1,7 @@
 {% load humanize %}
 {% comment %}Point coordinators to resources for finding and pitching to sponsors, once the community guide exists.{% endcomment %}
 
-<p>All communities must find finding for at least one intern (${{ current_round.sponsorship_per_intern|intcomma }} USD):</p>
+<p>All communities must find funding for at least one intern (${{ current_round.sponsorship_per_intern|intcomma }} USD):</p>
 
 <ul>
 	<li><b>Humanitarian open source communities</b> can apply for funding from <a href="{% url 'docs-community' %}#outreachy-general-fund" %}>Outreachy</a></li>
