Update to Django 4.2 LTS and Python 3.11
Referencing the Django long-term release schedule:

https://www.djangoproject.com/download/#supported-versions

Django 4.2 LTS will receive security updates and data loss fixes through
April 2026.

Support for fixing 4.2 LTS crashing bugs, major functionality bugs in
newly-introduced features, and regressions from older versions of Django
has already ended as of December 4, 2023.

Django 5.0 was just released on December 4, 2023. IMO it's too new for
us to run bleeding edge just before the initial application period
opens in January. Let's give them a few months to work out any bugs.

Future update plans:

Option 1: Upgrade to 5.x series in mid-2024
 - update to Django 5.0 in mid-June 2024
 - update to Django 5.1 in December 2024
 - update to Django 5.2 LTS in July 2025

Option 2: Upgrade to 5.x series in Dec 2024
 - use Django 4.2 LTS for most of 2024
 - skip Django 5.0
 - update to Django 5.1 in December 2024
 - update to Django 5.2 LTS in July 2025

Option 3: Stick with 4.2 LTS until July 2025
 - update to Django 5.2 LTS in July 2025

I would much rather go with Option 1 because of the alignment with
releases:

 - Django 5.0: released Dec 2023, we upgrade to it in June 2024
 - Django 5.1: released Aug 2024, we upgrade to it in Dec 2024
 - Django 5.2: released Apr 2025, we upgrade to it in July 2025

This allows enough time (2-6 months) for the Django releases to be
thoroughly tested.

IMO Option 3 is risky, because 4.2 will be showing its age in 2025, and
we'll have barely tested Django 5.x before the Dec cohort initial
application period starts.

I'm only putting option 2 on the table in case something happens over
the summer and upgrading Django is not feasible. (Knock on wood that
doesn't happen.)

All this will depend on the Wagtail long-term release schedule:

https://github.com/wagtail/wagtail/wiki/Release-schedule

Upgrading to Wagtail 5.2 LTS will be important so that we can receive
bug fixes through February 2025.

--- a/home/templates/home/review_interns.html
+++ b/home/templates/home/review_interns.html
@@ -84,9 +84,9 @@ Review interns for {{ current_round.official_name }}
 			<BR>Pronouns: {{ intern.get_pronouns_html|safe }}<BR>
 			{% if intern.location %}
 				<BR>Location: {{ intern.location }}<BR>
-				Guessed city and country: {% with loc=intern.get_city_country %}{{ loc.0 }}, {{ loc.1 }}{% endwith %}<BR>
 			{% else %}
 				<BR>Location: <span class="badge badge-pill badge-warning">unknown</span><BR>
+				Country: {% with application=i.applicant %}{% include 'home/snippet/applicant_location.html' %}{% endwith %}<BR>
 			{% endif %}
 			{% if intern.timezone %}
 				Timezone: {{ intern.timezone }}<BR><BR>
