Add photo album covers to Outreachy 2023 year in review blog post.
Correct date published.

Fix Conservancy logo size on mobile screens.

--- a/home/templates/home/blog/2024-01-10-outreachy-2023-year-in-review.html
+++ b/home/templates/home/blog/2024-01-10-outreachy-2023-year-in-review.html
@@ -10,7 +10,7 @@ Outreachy 2023: Year in Review
 
 <h1>Outreachy 2023: Year in Review</h1>
 
-<p><i>Date: January 10, 2024</i></p>
+<p><i>Date: January 11, 2024</i></p>
 {% comment %}<p><i>Last updated: date</i> - change log. See the <a href='#FIXME-ID'>FIXME</a> section below.</p>{% endcomment %}
 
 <div class="card border-info mb-3">
@@ -18,7 +18,7 @@ Outreachy 2023: Year in Review
 	<div class="card-body">
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col">
+				<div class="col-sm">
 					<a href="https://sfconservancy.org/sustainer/"><img src="{% static 'conservancy-logo.png' %}" alt="Software Freedom Conservancy logo" class="img-thumbnail float-left" height="200" width="200"></a>
 				</div>
 				<div class="col-10">
@@ -61,14 +61,44 @@ Outreachy 2023: Year in Review
 
 <p>We also appreciate our alums who served as the leads for the local celebrations. These dedicated leads played a crucial role in organizing the events, ensuring that everyone at the event felt celebrated and included. Outreachy merch were also sent around the world, symbolizing the interconnectedness of the global Outreachy community.</p>
 
-<p>Photo albums capturing the vibrant moments of each celebration are available:</p>
+<p>Photo albums capturing the vibrant moments of each celebration are available (CC-BY Outreachy):</p>
 
-<p><a href="https://nextcloud.sfconservancy.org/apps/photos/public/Jx00FZsOIpRSs6pdOKEvO9MwtLFkJmDp">Cameroon</a></p>
-<p><a href="https://nextcloud.sfconservancy.org/apps/photos/public/BPGgZtATkaKO2RIq6aASC7IKztV6qMCy">Canada</a></p>
-<p><a href="https://nextcloud.sfconservancy.org/apps/photos/public/dnE0ZILO4SL5SMCmmaW55tX9EASDt9eu">India</a></p>
-<p><a href="https://nextcloud.sfconservancy.org/apps/photos/public/9wamsHiEET5DcZsVDXDfIpqMRh0HnDme">Kenya</a></p>
-<p><a href="https://nextcloud.sfconservancy.org/apps/photos/public/NuGmPTnQma2dDwXeNZlqMTrlf9VkyX83">Nigeria</a></p>
-<p><a href="https://nextcloud.sfconservancy.org/apps/photos/public/kybQNVHcmk81KCSraILEOnm0bWUgucHa">USA</a></p>
+<div class="container mb-4">
+	<a href="https://nextcloud.sfconservancy.org/apps/photos/public/Jx00FZsOIpRSs6pdOKEvO9MwtLFkJmDp">
+		<img class="rounded" width="200" src="{% static '2023-celebration/cameroon-celebration.jpg' %}" alt="Group photo of Cameroon Outreachy interns cutting a cake with the Outreachy logo" class="img-fluid">
+		<p>Cameroon</p>
+	</a>
+</div>
+<div class="container mb-4">
+	<a href="https://nextcloud.sfconservancy.org/apps/photos/public/BPGgZtATkaKO2RIq6aASC7IKztV6qMCy">
+		<img class="rounded" width="200" src="{% static '2023-celebration/canada-celebration.jpg' %}" alt="Group photo of Canada celebration" class="img-fluid">
+		<p>Canada</p>
+	</a>
+</div>
+<div class="container mb-4">
+	<a href="https://nextcloud.sfconservancy.org/apps/photos/public/dnE0ZILO4SL5SMCmmaW55tX9EASDt9eu">
+		<img class="rounded" width="200" src="{% static '2023-celebration/india-celebration.jpg' %}" alt="Group photo of India celebration" class="img-fluid">
+		<p>India</p>
+	</a>
+</div>
+<div class="container mb-4">
+	<a href="https://nextcloud.sfconservancy.org/apps/photos/public/9wamsHiEET5DcZsVDXDfIpqMRh0HnDme">
+		<img class="rounded" width="200" src="{% static '2023-celebration/kenya-celebration.jpg' %}" alt="Group photo of Kenya celebration" class="img-fluid">
+		<p>Kenya</p>
+	</a>
+</div>
+<div class="container mb-4">
+	<a href="https://nextcloud.sfconservancy.org/apps/photos/public/NuGmPTnQma2dDwXeNZlqMTrlf9VkyX83">
+		<img class="rounded" width="200" src="{% static '2023-celebration/nigeria-celebration.jpg' %}" alt="Group photo of Nigeria celebration" class="img-fluid">
+		<p>Nigeria</p>
+	</a>
+</div>
+<div class="container mb-4">
+	<a href="https://nextcloud.sfconservancy.org/apps/photos/public/kybQNVHcmk81KCSraILEOnm0bWUgucHa">
+		<img class="rounded" width="200" src="{% static '2023-celebration/usa-celebration.jpg' %}" alt="Group photo of USA celebration" class="img-fluid">
+		<p>USA</p>
+	</a>
+</div>
 
 <p>These celebratory events not only recognized the interns but also acknowledged the vital role of mentors, coordinators, and the wider open source community. It was a moment to reflect on the collaborative efforts that have driven Outreachy to its current standing and set the stage for future endeavors.</p>
 
@@ -90,12 +120,23 @@ Outreachy 2023: Year in Review
 
 <p>Outreachy's commitment to open source and software freedom extended beyond its internship program. The team embraced platforms like Mastodon, PeerTube, NextCloud, Big Blue Button, Espanso, and Etherpad, showcasing a dedication to using and promoting open source software. This move not only aligns with Outreachy's values but also sets an example for the wider community.</p>
 
+<div class="container">
+	<div class="row">
+		<div class="col">
+			<a href="https://hachyderm.io/@outreachy"><img src="{% static 'Mastodon/logo-purple.svg' %}" height="50" class="mx-3" alt="Mastodon logo">Follow Outreachy on Mastodon</a>
+		</div>
+		<div class="col">
+			<a href="https://diode.zone/a/outreachy/video-channels"><img height="50" src="{% static 'PeerTube/Logo_de_PeerTube.svg.png' %}" class="mx-3" alt="PeerTube logo">Follow Outreachy on PeerTube</a>
+		</div>
+	</div>
+</div>
+
 <h3>6. Community Engagement</h3>
 <p>Outreachy didn't limit its impact to its own community. The team actively spoke about Outreachy at 14 different events and meet-ups, amplifying the message of diversity and inclusion in open source. These engagements provided opportunities to share insights, inspire new contributors, and foster collaborations with like-minded organizations.</p>
 
 <p>Outreachy organizers gave a keynote at FOSSY to celebrate 1,000 interns and talk about Outreachy's history:</p>
 
-<div class="container mt-4 mb-4">
+<div class="container mb-4">
 	<div class="embed-responsive embed-responsive-16by9">
 		<iframe class="embed-responsive-item" src="https://archive.org/embed/fossy2023-outreachy-celebration" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
 	</div>
@@ -150,7 +191,7 @@ Outreachy 2023: Year in Review
 	<div class="card-body">
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col">
+				<div class="col-sm">
 					<a href="https://sfconservancy.org/sustainer/"><img src="{% static 'conservancy-logo.png' %}" alt="Software Freedom Conservancy logo" class="img-thumbnail float-left" height="200" width="200"></a>
 				</div>
 				<div class="col-10">
