Add YouTube live stream link to 2023 in review blog post

--- a/home/templates/home/blog/2024-01-10-outreachy-2023-year-in-review.html
+++ b/home/templates/home/blog/2024-01-10-outreachy-2023-year-in-review.html
@@ -108,7 +108,9 @@ Outreachy 2023: Year in Review
 
 <h3>3. Applicant Empowerment</h3>
 
-<p>Empowering applicants is a core focus of Outreachy, and in 2023, 1,936 applicants were approved to participate in the May and December contribution periods. To enhance the application process, the team increased initial application reviewers to 17, providing a more comprehensive and supportive review process. Live Q&A sessions were conducted to help applicants navigate open source community practises and understand the Outreachy application process better.</p>
+<p>Empowering applicants is a core focus of Outreachy, and in 2023, 1,936 applicants were approved to participate in the May and December contribution periods. To enhance the application process, the team increased initial application reviewers to 17, providing a more comprehensive and supportive review process.</p>
+
+<p><a href="https://www.youtube.com/@outreachyinternships/streams">Live Q&and;A sessions</a> were conducted to help applicants navigate open source community practices and understand the Outreachy application process better.</p>
 
 <h3>4. Mentor and Coordinator Engagement</h3>
 
