Add Tilda's picture and hiring announcement blog link to 2023 in review blog post

--- a/home/templates/home/blog/2024-01-10-outreachy-2023-year-in-review.html
+++ b/home/templates/home/blog/2024-01-10-outreachy-2023-year-in-review.html
@@ -116,7 +116,11 @@ Outreachy 2023: Year in Review
 
 <p>The involvement of mentors and community coordinators is crucial to Outreachy's success. In 2023, 191 mentors supported interns in the May and December cohorts, showcasing the growing mentorship network. The team addressed challenges faced by mentors through discussion sessions at three different conferences. Outreachy's commitment to mentorship extended to encouraging interns to become mentors, resulting in 30 mentors who were past Outreachy interns – a significant increase from previous years.</p>
 
-<p>To further support mentors, a full-time Outreachy mentor advocate - Tilda Udufo was hired, reflecting the dedication to enhancing the mentorship experience. The team also conducted office hours, providing a platform for mentors and coordinators to seek guidance during critical phases such as the community sign-up period, contribution period, and internship period.</p>
+<img class="rounded mt-4" src="{% static 'organizers/tilda.jpeg' %}" alt="Headshot of Tilda Udufo" class="img-fluid"><p>Outreachy Mentor Advocate <i>(Photo Copyright Tilda Udufo)</i></p>
+
+<p>To further support mentors, <a href="{% url '2023-08-tilda' %}">a full-time Outreachy mentor advocate - Tilda Udufo was hired</a>, reflecting the dedication to enhancing the mentorship experience.</p>
+
+<p>The team also conducted office hours, providing a platform for mentors and coordinators to seek guidance during critical phases such as the community sign-up period, contribution period, and internship period.</p>
 
 <h3>5. Embracing Open Source</h3>
 
