--- a/home/templates/home/snippet/round_timeline.html
+++ b/home/templates/home/snippet/round_timeline.html
@@ -7,9 +7,10 @@
 	{% endif %}
     <tr><td><b>{{ current_round.initial_applications_open }} at 4pm UTC</b></td><td>Initial applications open</td></tr>
 	{% if not current_round.internstarts.has_passed %}
-		<tr><td><b>Jan. 15, 2023 at 3pm UTC</b></td><td><a href="https://www.youtube.com/@outreachyinternships">Live Q&A for FOSS communities mentoring Outreachy interns</a></td></tr>
-		<tr><td><b>Jan. 17, 2023 at 3pm UTC</b></td><td><a href="https://www.youtube.com/@outreachyinternships">Live Q&A for Outreachy applicants</a></td></tr>
-		<tr><td><b>Jan. 22, 2023 at 3pm UTC</b></td><td><a href="https://www.youtube.com/@outreachyinternships">Live Q&A for Outreachy mentors</a></td></tr>
+		<tr><td><b>Jan. 15, 2024 at 3pm UTC</b></td><td><a href="https://www.youtube.com/@outreachyinternships">Live Q&A for FOSS communities mentoring Outreachy interns</a></td></tr>
+		<tr><td><b>Jan. 17, 2024 at 3pm UTC</b></td><td><a href="https://www.youtube.com/@outreachyinternships">Live Q&A for Outreachy applicants - initial application tips</a></td></tr>
+		<tr><td><b>Jan. 22, 2024 at 3pm UTC</b></td><td><a href="https://www.youtube.com/@outreachyinternships">Live Q&A for Outreachy mentors</a></td></tr>
+		<tr><td><b>Feb. 21, 2024 at 3pm UTC</b></td><td><a href="https://www.youtube.com/@outreachyinternships">Live Q&A for Outreachy applicants - contribution period tips</a></td></tr>
 	{% endif %}
     <tr><td><b>{{ current_round.initial_applications_close }} at 4pm UTC</b></td><td>Initial application deadline</td></tr>
     <tr><td><b>{{ current_round.lateprojects }}</b></td><td>Project list finalized</td></tr>
