Add date when initial application results are available to rount timeline

--- a/home/templates/home/snippet/round_timeline.html
+++ b/home/templates/home/snippet/round_timeline.html
@@ -14,6 +14,7 @@
 	{% endif %}
     <tr><td><b>{{ current_round.initial_applications_close }} at 4pm UTC</b></td><td>Initial application deadline</td></tr>
     <tr><td><b>{{ current_round.lateprojects }}</b></td><td>Project list finalized</td></tr>
+    <tr><td><b>{{ current_round.contributions_open }} at 4pm UTC</b></td><td>Initial application results available</td></tr>
     <tr><td><b>{{ current_round.contributions_open }} to {{ current_round.contributions_close }}</b></td><td>Contribute to projects</td></tr>
     <tr><td><b>{{ current_round.contributions_close }}<br> at 4pm UTC</b></td><td>Final application deadline</td></tr>
     <tr><td><b>{{ current_round.internannounce }} at 4pm UTC</b></td><td>Accepted interns announced</td></tr>
