fixed(forge your future with open source)and(git lab) links

--- a/home/templates/home/docs/applicant_guide.html
+++ b/home/templates/home/docs/applicant_guide.html
@@ -292,8 +292,8 @@ The Outreachy website <a href="{% url 'account' %}">account preferences</a> will
 <p>Outreachy recommends the following resources for learning about contributing to free and open source software projects:
 <ul>
 	<li><a href="https://opensource.com/resources/what-open-source">"What is open source?"</a> an article by opensource.com</li>
-	<li><a href="https://pragprog.com/book/vbopens/forge-your-future-with-open-source">"Forge Your Future With Open Source"</a> an introductory book for open source newcomers</li>
-	<li><a href="https://lab.github.com/">GitHub Lab</a> a free resource for learning git</li>
+	<li><a href="https://pragprog.com/titles/vbopens/forge-your-future-with-open-source/">"Forge Your Future With Open Source"</a> an introductory book for open source newcomers</li>
+	<li><a href="https://skills.github.com/">GitHub Lab</a> a free resource for learning git</li>
 	<li><a href="https://www.freecodecamp.org/">FreeCodeCamp</a> a free resource for learning programming skills</li>
 	<li><a href="https://up-for-grabs.net">Up for Grabs</a> (unaffiliated with Outreachy) - find projects to volunteer your time with</li>
 </ul>
