Show feedback #3 open and due date on intern status dashboard
Also, normalize feedback names to use numbers, not initial, midpoint,
and final feedback.

--- a/home/templates/home/dashboard/staff_intern_progress.html
+++ b/home/templates/home/dashboard/staff_intern_progress.html
@@ -54,12 +54,14 @@
 			{% if intern.intern_has_custom_dates %}
 				<tr>
 					<td>starts: {{ intern.intern_starts }}<br>ends: {{ intern.intern_ends }}</td>
-					<td>initial feedback opens: {{ intern.initial_feedback_opens }}</td>
-					<td>initial feedback due: {{ intern.initial_feedback_due }}</td>
-					<td>mid-point feedback opens: {{ intern.midpoint_feedback_opens }}</td>
-					<td>mid-point feedback due: {{ intern.midpoint_feedback_due }}</td>
-					<td>final feedback opens: {{ intern.final_feedback_opens }}</td>
-					<td>final feedback due: {{ intern.final_feedback_due }}</td>
+					<td>feedback #1 opens:<BR>{{ intern.initial_feedback_opens }}</td>
+					<td>feedback #1 due:<BR>{{ intern.initial_feedback_due }}</td>
+					<td>feedback #2 opens:<BR>{{ intern.midpoint_feedback_opens }}</td>
+					<td>feedback #2 due:<BR>{{ intern.midpoint_feedback_due }}</td>
+					<td>feedback #3 opens:<BR>{{ intern.feedback3_opens }}</td>
+					<td>feedback #3 due:<BR>{{ intern.feedback3_due }}</td>
+					<td>feedback #4 opens:<BR>{{ intern.final_feedback_opens }}</td>
+					<td>feedback #4 due:<BR>{{ intern.final_feedback_due }}</td>
 				</tr>
 			{% endif %}
 		{% endfor %}
